Simplify Platform.getBundles() and tracker open/closing